tests/l3-large/ackbar-interesting_ackermann.l3
//test return 61
//Calculates the Ackermann function for a number
//grows super large really quick ack(4,4) = 2^2^2^65536−3
//https://en.wikipedia.org/wiki/Ackermann_function

int ack(int m, int n){
    // must be non negative
    if(m < 0 || n < 0){return (-1);}
    
    if(m == 0){return n+1;}
    if(m > 0 && n == 0){return ack(m-1,1);}
    if(m > 0 && n > 0){return ack(m-1, ack(m, n-1));}

    return -1; //error
}

int main(){
    return ack(3,3);
}
